# ziv

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
resources/: common.qrc
src/: main.cpp
src/core/: anglemeasurementtool.cpp  anglemeasurementtool.h  brushtool.cpp  brushtool.h  colorpickertool.cpp  colorpickertool.h  imagegraphicsview.cpp  imagegraphicsview.h  imageviewer.cpp  imageviewer.h  measurementtool.cpp  measurementtool.h
src/ui/: mainwindow.cpp  mainwindow.h
src/utils/: invert_icons.py  panelstyle.cpp  panelstyle.h
